prevents overflow on the root element

--- a/src/styles/partials/_boilerplate.scss
+++ b/src/styles/partials/_boilerplate.scss
@@ -15,8 +15,9 @@
 html {
   box-sizing: border-box;
   color: $text-clr;
-  font-size: 100%; // Fallback for @include below. Set to browser default and then use ems when declaring your various font-sizes. (MR)
+  font-size: 100%;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 *,
